test(lotto): 로또 결과 초기화  구현